--- a/sass/Media/_desktop.scss
+++ b/sass/Media/_desktop.scss
@@ -1,13 +1,16 @@
 @media screen and (max-width: $desktop-width) {
   section {
     padding: 60px 0;
+
     .section__title {
       margin-bottom: 40px;
     }
   }
+
   .drinks span.bread {
     max-width: 230px;
   }
+
   .drinks span.beans {
     top: -48px;
   }
@@ -18,6 +21,7 @@
 
   .location .wrapper {
     padding: 0;
+
     .location__content {
       padding: 0 40px;
     }
@@ -26,6 +30,7 @@
   section.moments {
     padding-bottom: 35px;
   }
+
   .moments .section-title {
     margin-bottom: 60px;
   }
@@ -33,17 +38,19 @@
   .moments .moments__wrap {
     flex-wrap: wrap;
     justify-content: space-between;
-    > div {
+
+    >div {
       line-height: 0;
       margin-bottom: 25px;
       width: 48%;
+
       &:nth-child(even) {
         margin-right: 0;
       }
     }
   }
 
-  .moments .moments__wrap > div:not(:last-child) {
+  .moments .moments__wrap>div:not(:last-child) {
     margin-right: 0;
   }
 
@@ -54,19 +61,41 @@
   .bean {
     max-width: 140px;
   }
+
   footer {
     .first-bean {
       top: -27px;
     }
+
     .fourth-bean {
       right: -27px;
     }
+
     .fifth-bean.bean {
       left: -32px;
     }
   }
+
   .section__title h2 {
     display: inline-block;
     font-size: 1.8125rem;
+  }
+
+}
+
+@media screen and (min-width: $desktop-width) {
+
+  .coffee-section {
+    .coffee-wrap {
+      grid-template-columns: 50% auto;
+    }
+
+    .sticky-image {
+      height: 100vh;
+
+      img {
+        object-position: center center;
+      }
+    }
   }
 }
