--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,32 +1,45 @@
 header {
   padding: 10px 0;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+
   .header__wrap {
     @include flex;
     align-items: center;
     justify-content: space-between;
   }
+
   .header__brand {
     max-width: 90px;
+
     img {
       width: 100%;
     }
   }
+
   .header__nav {
     ul {
       @include flex;
+
       li {
         padding: 0 13px;
+
         a {
           color: map-get($theme-color, primary-color);
           font-family: 'Lato', sans-serif;
           line-height: 1.222;
           font-size: 1.125rem;
           @include transition(0.3s ease-in-out);
+
           &:hover,
           &:focus {
             color: map-get($theme-color, secondary-color);
           }
         }
+
         &:last-child {
           padding-right: 0;
         }
@@ -40,6 +53,7 @@ header {
   display: none;
   @include transition(0.3s ease-in-out);
   cursor: pointer;
+
   &:hover,
   &:focus {
     color: map-get($theme-color, secondary-color);
